quotes/template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    deployment: mysql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quotes
  name: quotes
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: quotes
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: mysql
  template:
    metadata:
      labels:
        deployment: mysql
      name: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_USER
          value: myuser
        - name: MYSQL_ROOT_PASSWORD
          value: redhat123
        - name: MYSQL_PASSWORD
          value: redhat123
        - name: MYSQL_DATABASE
          value: mydb
        image: image-registry.openshift-image-registry.svc:5000/openshift/mysql:8.0-el8
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quotes
  name: quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: quotes
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: quotes
      name: quotes
    spec:
      containers:
      - env:
        - name: DATABASE_SERVICE_NAME
          value: mysql
        - name: DATABASE_USER
          value: myuser
        - name: DATABASE_PASSWORD
          value: redhat123
        - name: DATABASE_NAME
          value: mydb
        image: "quotes:latest"
        imagePullPolicy: IfNotPresent
        name: quotes
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quotes
  name: quotes
spec:
  host: quotes-mysql-template.apps.ocp4.example.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quotes
    weight: 100
  wildcardPolicy: None
